--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "8.3.0",
     "expo": "~53.0.9",
     "expo-constants": "~17.1.6",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-hook-form": "^7.56.4",
-    "react-native": "0.79.2",
-    "@react-native-community/datetimepicker": "8.3.0"
+    "react-native": "0.79.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
