--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "8.3.0",
-    "@react-navigation/stack": "^7.3.2",
+    "@react-navigation/native-stack": "^7.3.13",
     "expo": "~53.0.9",
     "expo-constants": "~17.1.6",
     "expo-status-bar": "~2.2.3",
