--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
     "expo": "~53.0.9",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-camera": "~16.1.6",
     "expo-constants": "~17.1.6",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.8.1",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.56.4",
     "react-native": "0.79.2",
-    "react-dom": "19.0.0",
-    "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
