--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-     "build": "expo build:web",
+    "build": "expo build:web",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -18,13 +18,14 @@
     "expo-camera": "~16.1.6",
     "expo-constants": "~17.1.6",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.13",
     "firebase": "^11.8.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.56.4",
     "react-native": "0.79.2",
     "react-native-web": "^0.20.0",
-    "expo-updates": "~0.28.13"
+    "react-native-gesture-handler": "~2.24.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
