--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.9.0",
     "expo": "~53.0.9",
     "expo-camera": "~16.1.6",
+    "expo-clipboard": "~7.1.4",
     "expo-constants": "~17.1.6",
     "expo-status-bar": "~2.2.3",
     "expo-updates": "~0.28.13",
@@ -26,8 +27,8 @@
     "react-hook-form": "^7.56.4",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-web": "^0.20.0",
-    "expo-clipboard": "~7.1.4"
+    "react-native-toast-message": "^2.3.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
